--- a/app/src/main/res/layout/activity_enable_keyboard.xml
+++ b/app/src/main/res/layout/activity_enable_keyboard.xml
@@ -187,17 +187,50 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <FrameLayout
-            android:id="@+id/nativeAdFrameLayoutSmall"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/clAd"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="invisible"
-            android:elevation="@dimen/padding"
-            app:layout_constraintEnd_toEndOf="parent"
-            android:layout_margin="@dimen/fab_padding"
-            android:background="@drawable/bg_native_ad"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent" />
+            app:layout_constraintBottom_toBottomOf="parent">
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adViewOne"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:adUnitId="ca-app-pub-6814505709397727/3541499341"
+                app:adSize="BANNER"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adViewTwo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:adUnitId="ca-app-pub-6814505709397727/8015080919"
+                app:adSize="BANNER"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+            <com.google.android.gms.ads.AdView
+                android:id="@+id/adViewThree"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:minHeight="50dp"
+                app:adUnitId="ca-app-pub-6814505709397727/3349927652"
+                app:adSize="BANNER"
+                android:visibility="gone"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
