--- a/app/src/main/res/layout/activity_exit.xml
+++ b/app/src/main/res/layout/activity_exit.xml
@@ -4,14 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/bg_color"
-    tools:context="org.dslul.openboard.translator.pro.PreSplashScreenActivity">
+    android:background="@drawable/bg_splash_screen"
+    tools:context="org.dslul.openboard.translator.pro.ExitActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/clMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_48sdp"
+        android:layout_marginTop="@dimen/fab_padding"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -67,76 +67,102 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+
+    <RatingBar
+        android:id="@+id/exit_rating"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="@dimen/fab_padding"
+        android:numStars="5"
+        android:stepSize="1"
+        android:theme="@style/RatingBar"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/clMain" />
+
     <FrameLayout
         android:id="@+id/nativeAdFrameLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_marginTop="@dimen/fab_padding"
-        android:layout_marginHorizontal="@dimen/fab_padding"
-        android:background="@drawable/bg_native_ad"
-        android:elevation="2dp"
+        android:background="@drawable/bg_main_less_rounded"
+        app:layout_constraintTop_toBottomOf="@id/exit_rating"
         android:visibility="gone"
-        app:layout_constraintBottom_toTopOf="@id/spline"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/clMain" />
+        app:layout_constraintBottom_toTopOf="@id/tvQuit"
+        android:layout_margin="@dimen/padding"/>
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/spline"
-        android:layout_width="@dimen/_100sdp"
-        android:layout_height="@dimen/_100sdp"
-        android:layout_gravity="center"
-        android:layout_marginHorizontal="@dimen/extra_padding"
-        android:layout_marginBottom="@dimen/padding_10"
-        android:background="@drawable/bg_nothing_rounded_ripple"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_fileName="loading_circle.json" />
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/btnStart"
+    <TextView
+        android:id="@+id/tvQuit"
         android:layout_width="match_parent"
-        android:layout_height="56dp"
-        android:layout_margin="@dimen/fab_padding"
-        android:visibility="invisible"
-        android:backgroundTint="@color/blue"
-        android:elevation="@dimen/fab_padding"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:text="@string/quit"
+        android:textColor="@color/black"
+        android:textSize="30sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/textView5"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="@dimen/less_padding"
+        android:gravity="center"
+        android:text="@string/do_you_really_want_to_quit"
+        android:textColor="@color/gray_700"
+        android:textSize="14sp"
+        app:layout_constraintBottom_toTopOf="@id/llBtn"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@drawable/bg_main_less_rounded">
+        tools:layout_editor_absoluteX="20dp" />
+
+    <LinearLayout
+        android:id="@+id/llBtn"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/fab_padding"
+        android:orientation="horizontal"
+        app:layout_constraintBottom_toBottomOf="parent">
 
         <TextView
-            android:id="@+id/tvStart"
-            android:layout_width="wrap_content"
+            android:id="@+id/btnYes"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:elevation="5dp"
-            android:text="@string/let_s_translate"
-            android:textColor="@color/white"
-            android:textSize="@dimen/_16sdp"
+            android:layout_margin="@dimen/padding_10"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_less_rounded"
+            android:backgroundTint="?attr/colorSecondary"
+            android:elevation="@dimen/padding_10"
+            android:gravity="center"
+            android:padding="@dimen/padding_10"
+            android:text="@string/yes"
+            android:textColor="@color/black"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <ImageView
-            android:id="@+id/btnStartIcon"
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginEnd="8dp"
-            android:background="@color/color_nothing"
-            android:scaleType="center"
-            android:visibility="gone"
+        <TextView
+            android:id="@+id/btnNo"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/padding_10"
+            android:layout_marginStart="@dimen/less_padding"
+            android:layout_weight="1"
+            android:background="@drawable/bg_main_less_rounded"
+            android:backgroundTint="@color/accent"
+            android:elevation="@dimen/padding_10"
+            android:gravity="center"
+            android:padding="@dimen/padding_10"
+            android:text="@string/no"
+            android:textColor="@color/white"
+            android:textSize="12sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_navigate_next_24"
-            app:tint="@color/white"
-            tools:ignore="VectorDrawableCompat" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
