--- a/app/src/main/res/values/dictionary-pack.xml
+++ b/app/src/main/res/values/dictionary-pack.xml
@@ -17,11 +17,12 @@
 ** limitations under the License.
 */
 -->
+
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
     <string name="dictionary_pack_client_id" translatable="false">org.dslul.openboard.inputmethod.latin</string>
-    <string name="dictionary_pack_metadata_uri" translatable="false"></string>
+    <string name="dictionary_pack_metadata_uri" translatable="false" />
     <string name="dictionary_pack_settings_activity" translatable="false">org.dslul.openboard.inputmethod.dictionarypack.DictionarySettingsActivity</string>
     <string name="authority" translatable="false">com.guru.translate.translator.pro.translation.keyboard.translator</string>
-    <string name="default_metadata_uri" translatable="false"></string>
+    <string name="default_metadata_uri" translatable="false" />
     <string name="local_metadata_filename" translatable="false">metadata.json</string>
 </resources>
